# dl-mlflow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
readme/: README.md
readme/guide/: 1_wiring_mlflow_into_an_experiment_repo.md
readme/technical/: 1_callback_and_scaffold.md
readme/tldr/: 1_install_and_enable.md
src/dl_mlflow/: __init__.py  init_extension.py
src/dl_mlflow/callbacks/: __init__.py  mlflow.py
src/dl_mlflow/metrics_sources/: __init__.py  mlflow.py
src/dl_mlflow/trackers/: __init__.py  mlflow.py
tests/: test_init_extension.py  test_package_import.py  test_tracking_components.py
