[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dl-mlflow"
version = "0.0.1"
description = "Local MLflow integration layer for dl-core."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dl-core",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.entry-points."dl_core.init_extensions"]
mlflow = "dl_mlflow.init_extension:MlflowInitExtension"

[tool.uv.sources]
dl-core = { path = "../dl-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/dl_mlflow"]
