[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-learning-mlflow"
version = "0.0.2a3"
description = "Local MLflow integration layer for dl-core."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "deep-learning-core==0.0.2a3",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/Blazkowiz47/dl-mlflow"
Documentation = "https://github.com/Blazkowiz47/dl-mlflow/tree/main/readme"
Repository = "https://github.com/Blazkowiz47/dl-mlflow"
Issues = "https://github.com/Blazkowiz47/dl-mlflow/issues"

[project.entry-points."dl_core.init_extensions"]
mlflow = "dl_mlflow.init_extension:MlflowInitExtension"

[tool.uv.sources]
"deep-learning-core" = { path = "../dl-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/dl_mlflow"]
